2009-11-10  Ozan Çağlayan <ozan_at_pardus.org.tr>
	* setup.py: Port to distutils,
	* scripts/: Move standalone scripts under scripts/,
	* TODO: Update TODO file

2009-11-09  Ozan Çağlayan <ozan_at_pardus.org.tr>
	* ChangeLog: New file
	* setup.py: Add setup.py and prepare for 2.0,
	* examples/: Rename exampleRepo to examples and README,
	* src/: Move all *.py files under src for a cleaner hierarchy.